# h264_analyzer

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  installEnv.md  vcpkg.json
.github/workflows/: release.yml  windows-msys2.yml
docs/: ai-continuation-notes.md  ai-next-steps.md  ai-streameye-roadmap.md  windows-deployment.md
docs/releases/: README.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
installer/: H264Analyzer.iss  ZStreamEye.iss
resources/: app.qrc
resources/windows/: ZStreamEye.rc
scripts/: deploy-windows-msys2.ps1  package-windows-installer.ps1
src/: main.cpp
src/app/: AnalysisStore.cpp  AnalysisStore.h  CMakeLists.txt  DecodeSession.cpp  DecodeSession.h  ExportController.cpp  ExportController.h  MainWindow.cpp  MainWindow.h  UpdateChecker.cpp  UpdateChecker.h
src/core/: AacAdtsParser.cpp  AacAdtsParser.h  AnalysisExportWriter.cpp  AnalysisExportWriter.h  BitstreamParser.cpp  BitstreamParser.h  CMakeLists.txt  CodecKind.h  DecodeWorker.cpp  DecodeWorker.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FrameAnalysis.cpp  FrameAnalysis.h  H264FrameAnalysisAdapter.cpp  H264FrameAnalysisAdapter.h  H264Parser.cpp  H264Parser.h  HevcParser.cpp  HevcParser.h  MediaTypes.cpp  MediaTypes.h  Mp3FrameParser.cpp  Mp3FrameParser.h  RebufferState.h  StreamDocument.cpp  StreamDocument.h
src/core/analysis/: AccessUnitAnalyzer.cpp  AccessUnitAnalyzer.h  AnalysisStats.cpp  AnalysisStats.h
src/core/decode/: DecodeEventSink.h  DecodeLoop.cpp  DecodeLoop.h  DecodeSeekPlanner.cpp  DecodeSeekPlanner.h  DecodeWorker.cpp  DecodeWorker.h  DecodedFrameAnalysisBuilder.cpp  DecodedFrameAnalysisBuilder.h  DecodedFrameDispatcher.cpp  DecodedFrameDispatcher.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegStreamInfoBuilder.cpp  FFmpegStreamInfoBuilder.h  FirstFramePauseController.cpp  FirstFramePauseController.h  FramePacing.cpp  FramePacing.h  PacketRawDataBuilder.cpp  PacketRawDataBuilder.h  PendingAccessUnitDispatcher.cpp  PendingAccessUnitDispatcher.h  RebufferProgressTracker.cpp  RebufferProgressTracker.h  SeekCheckpointEmitter.cpp  SeekCheckpointEmitter.h  StreamLogFormatter.cpp  StreamLogFormatter.h
src/core/export/: AnalysisExportWriter.cpp  AnalysisExportWriter.h  H264SyntaxJsonWriter.cpp  H264SyntaxJsonWriter.h
src/core/model/: CodecKind.h  DecodedVideoFrame.h  FrameAnalysis.cpp  FrameAnalysis.h  FrameSeekCheckpoint.h  MediaTypes.cpp  StreamDocument.cpp  StreamDocument.h  StreamInfo.h
src/core/parser/: BitstreamParser.cpp  BitstreamParser.h  ParserFactory.cpp  ParserFactory.h
src/core/parser/audio/: AacAdtsParser.cpp  AacAdtsParser.h  Mp3FrameParser.cpp  Mp3FrameParser.h
src/core/parser/h264/: H264FrameAnalysisAdapter.cpp  H264FrameAnalysisAdapter.h  H264Parser.cpp  H264Parser.h
src/core/parser/hevc/: HevcParser.cpp  HevcParser.h
src/core/parser/video/h264/: H264CabacContextModel.cpp  H264CabacDecoder.cpp  H264CabacDecoder.h  H264CabacMacroblockParser.cpp  H264CabacMacroblockParser.h  H264CabacSyntaxReader.cpp  H264CabacSyntaxReader.h  H264CavlcMacroblockParser.cpp  H264CavlcMacroblockResidualParser.cpp  H264CavlcMacroblockResidualParser.h  H264CavlcResidualParser.cpp  H264FrameAnalysisAdapter.cpp  H264FrameAnalysisAdapter.h  H264MacroblockParser.cpp  H264MacroblockTypes.cpp  H264MacroblockTypes.h  H264MotionVectorParser.cpp  H264MotionVectorParser.h  H264ParameterSetParser.cpp  H264Parser.cpp  H264Parser.h  H264SliceDataContext.h  H264SliceHeaderParser.cpp
src/core/parser/video/h264/cabac/: H264CabacContextModel.cpp  H264CabacContextModel.h  H264CabacDecoder.cpp  H264CabacDecoder.h  H264CabacMacroblockParser.cpp  H264CabacMacroblockParser.h  H264CabacMacroblockSyntaxReader.cpp  H264CabacMacroblockSyntaxReader.h  H264CabacResidualSyntaxReader.cpp  H264CabacResidualSyntaxReader.h  H264CabacSubMacroblockSyntaxReader.cpp  H264CabacSubMacroblockSyntaxReader.h  H264CabacSyntaxReader.h  H264CabacSyntaxTypes.h
src/core/parser/video/h264/cavlc/: H264CavlcMacroblockParser.cpp  H264CavlcMacroblockParser.h  H264CavlcMacroblockResidualParser.cpp  H264CavlcMacroblockResidualParser.h  H264CavlcResidualParser.cpp  H264CavlcResidualParser.h
src/core/parser/video/hevc/: HevcParser.cpp  HevcParser.h
src/core/util/: BitReader.cpp  BitReader.h  ByteStream.cpp  ByteStream.h  Rbsp.cpp  Rbsp.h
src/launcher/: windows_launcher.cpp
src/platform/windows/: CMakeLists.txt
src/ui/: BitstreamHexView.cpp  BitstreamHexView.h  FrameListView.cpp  FrameListView.h  H264PropertyTreeBuilder.cpp  H264PropertyTreeBuilder.h  LogDock.cpp  LogDock.h  PropertyTreeView.cpp  PropertyTreeView.h  StatsDock.cpp  StatsDock.h  VideoCanvas.cpp  VideoCanvas.h
tests/: CMakeLists.txt  test_aac_adts_parser.cpp  test_analysis_stats.cpp  test_analysis_store.cpp  test_decode_helpers.cpp  test_h264_cabac_decoder.cpp  test_h264_cabac_syntax_reader.cpp  test_h264_parser.cpp  test_hevc_parser.cpp  test_mp3_frame_parser.cpp  test_packet_raw_data_builder.cpp  test_parser_factory.cpp  test_rebuffer_state.cpp  test_util.cpp
tests/fixtures/: README.md  annexb_sps_pps_idr_i.hex  avcc_length_exceeds_packet.hex  avcc_sps_pps.hex  cavlc_i_qp_delta.hex  cavlc_p_motion_vector.hex  cavlc_p_residual_then_motion_vector.hex  cavlc_p_skip.hex  truncated_p_slice_data.hex  truncated_pps.hex  truncated_slice_header.hex  truncated_sps.hex  unsupported_cabac_p.hex
